k8/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pisces
  namespace: cryptnode-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pisces
  template:
    metadata:
      labels:
        app: pisces
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: pisces
          image: registry.cryptnode.tech/devowski/pisces
          imagePullPolicy: Always
          ports:
            - containerPort: 80
