k8/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pisces
  namespace: cryptnode-dev
spec:
  selector:
    app: pisces
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
